--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "geist": "^1.4.2",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.1.5",
-    "next": "15.3.0-canary.31",
+    "next": "15.4.4",
     "next-auth": "5.0.0-beta.25",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "orderedmap": "^2.1.1",
     "papaparse": "^5.5.3",
     "postgres": "^3.4.7",
@@ -74,9 +74,9 @@
     "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.40.1",
-    "react": "19.0.0-rc-45804af1-20241021",
+    "react": "19.1.0",
     "react-data-grid": "7.0.0-beta.47",
-    "react-dom": "19.0.0-rc-45804af1-20241021",
+    "react-dom": "19.1.0",
     "react-markdown": "^9.1.0",
     "react-resizable-panels": "^2.1.9",
     "redis": "^5.6.1",
