--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "dependencies": {
-    "@ai-sdk/google": "2.0.0-beta.6",
-    "@ai-sdk/provider": "2.0.0-beta.1",
-    "@ai-sdk/react": "2.0.0-beta.6",
-    "@ai-sdk/xai": "2.0.0-beta.2",
+    "@ai-sdk/google": "2.0.1",
+    "@ai-sdk/provider": "2.0.0",
+    "@ai-sdk/react": "2.0.2",
+    "@ai-sdk/xai": "2.0.1",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-python": "^6.2.1",
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.1",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/api-logs": "0.46.0",
+    "@opentelemetry/api-logs": "0.203.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -41,26 +41,26 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@vercel/analytics": "^1.5.0",
-    "@vercel/blob": "^0.24.1",
-    "@vercel/functions": "^2.2.5",
+    "@vercel/blob": "^1.1.1",
+    "@vercel/functions": "^2.2.7",
     "@vercel/otel": "^1.13.0",
     "@vercel/postgres": "^0.10.0",
-    "ai": "5.0.0-beta.6",
-    "bcrypt-ts": "^5.0.3",
+    "ai": "5.0.2",
+    "bcrypt-ts": "^7.1.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
     "date-fns": "^4.1.0",
     "diff-match-patch": "^1.0.5",
-    "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.44.3",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "fast-deep-equal": "^3.1.3",
-    "framer-motion": "^11.18.2",
+    "framer-motion": "^12.23.12",
     "geist": "^1.4.2",
-    "lucide-react": "^0.446.0",
+    "lucide-react": "^0.536.0",
     "nanoid": "^5.1.5",
-    "next": "15.4.4",
+    "next": "15.4.5",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "orderedmap": "^2.1.1",
@@ -74,42 +74,42 @@
     "prosemirror-schema-list": "^1.5.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.40.1",
-    "react": "19.1.0",
+    "react": "19.1.1",
     "react-data-grid": "7.0.0-beta.47",
-    "react-dom": "19.1.0",
-    "react-markdown": "^9.1.0",
-    "react-resizable-panels": "^2.1.9",
-    "redis": "^5.6.1",
+    "react-dom": "19.1.1",
+    "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^3.0.4",
+    "redis": "^5.7.0",
     "remark-gfm": "^4.0.1",
-    "resumable-stream": "^2.2.1",
+    "resumable-stream": "^2.2.3",
     "server-only": "^0.0.1",
-    "sonner": "^1.7.4",
+    "sonner": "^2.0.7",
     "swr": "^2.3.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.25.76"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@playwright/test": "^1.54.1",
+    "@biomejs/biome": "2.1.3",
+    "@playwright/test": "^1.54.2",
     "@tailwindcss/typography": "^0.5.16",
     "@types/d3-scale": "^4.0.9",
-    "@types/node": "^22.16.5",
+    "@types/node": "^24.2.0",
     "@types/papaparse": "^5.3.16",
     "@types/pdf-parse": "^1.1.5",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.32.0",
-    "eslint-config-next": "14.2.5",
-    "eslint-config-prettier": "^9.1.2",
-    "eslint-import-resolver-typescript": "^3.10.1",
+    "eslint-config-next": "15.4.5",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-tailwindcss": "^3.18.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.14.0"
 }
